--- a/showcase/portal_enter_WiFi.html
+++ b/showcase/portal_enter_WiFi.html
@@ -106,9 +106,10 @@ function staticCheck() {
 <input id='dns' name='dns' class='none' maxlength='15' value='' ><br/>
 
 <button type='submit'>Save</button></form><br/><form action='/wifi?refresh=1' method='POST'>
-<button name='refresh' value='1'>Refresh</button></form><div class='backlink'>
+<button name='refresh' value='1'>Refresh</button></form>
 
-<a class="backlink" href='/'>Back</a>
+<div class='backlink'>
+<a href='/'>Back</a>
 </div>
 </div>
 </body>
