--- a/showcase/portal_info.html
+++ b/showcase/portal_info.html
@@ -76,4 +76,9 @@ dd {color:#af601a;}
 <dd>No</dd>
 </dl>
 
-<div class='backlink'><a href='/'>Back</a></div></div></body></html>
+<div class='backlink'>
+<a href='/'>Back</a>
+</div>
+</div>
+</body>
+</html>
